fixed alignment of portrait

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -41,14 +41,6 @@ h2::after {
 }
 
 @media screen and (max-width:980px) {
-    .header {
-        display:block;
-        text-align:center;
-    }
-
-    .header div p {
-        display:block;
-    }
     .contact img {
         display:block;
         margin-left:auto;
@@ -58,24 +50,34 @@ h2::after {
 
 /* ---------- header ---------- */
 .header {
+    border:1px solid green;
     display:flex;
     flex-wrap:wrap;
-    justify-content:space-between;
+    justify-content:space-evenly;
     align-items:baseline;
     margin:0px 20px;
+    column-gap:20px;
 }
 
 .header h1 {
-    flex:1 1 auto;
+    border:1px solid blue;
+    flex:0 0 auto;
     font-family:"Alegreya", serif;
     font-size:36px;
     font-weight:700;
 }
 
+.header .nav {
+    border:1px solid red;
+    display:flex;
+    wrap:nowrap;
+    column-gap:20px;
+}
+
 .header div p {
     flex:1 1 auto;
-    display:inline-block;
-    margin-right:20px;
+    display:inline-flex;
+    /* margin-right:20px; */
 }
 
 .header p:hover {
@@ -186,21 +188,18 @@ h2::after {
 .contact {
     display:flex;
     flex-wrap:wrap;
-    justify-content:center;
+    max-width:max-content;
     align-items:flex-start;
-    margin:0px 20px;
+    column-gap:20px;
 }
 
 .contact img {
     flex:0 0 auto;
     max-width:100px;
-    margin-right:20px;
-    justify-content:center;
 }
 
 .contact p {
-    flex:1 1 auto;
-    margin-right:20px;
+    flex:0 0 auto;
 }
 
 .contact div p:first-child {
